# tmuxxer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: config.md  install.sh
src/: bashrc.rs  config.rs  config_cmd.rs  deps.rs  docker.rs  fzf.rs  install.rs  lib.rs  main.rs  sessionizer.rs  setup.rs  shell_config.rs  terminal_ui.rs  test_support.rs  tmux.rs  tmux_conf.rs  updates.rs
src/bashrc/: tests.rs
src/config/: tests.rs
src/config_cmd/: tests.rs
src/install/: tests.rs
src/sessionizer/: tests.rs
src/setup/: tests.rs
src/shell_config/: tests.rs
src/updates/: tests.rs
tests/unit/: config.rs  docker.rs  install.rs  main_help.rs  sessionizer.rs  setup.rs  tmux_conf.rs  updates.rs
