[package]
name = "tmuxxer"
version = "1.0.0"
edition = "2021"
description = "Tmux power tools — sessionizer with fzf"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ptylabs/tmuxxer"
exclude = ["AGENTS.md"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.8.23"

[dev-dependencies]
proptest = "1.9.0"

[[bin]]
name = "tmuxxer"
path = "src/main.rs"
