[package]
name = "tmuxxer"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
description = "⚡Tmux power tools — sessionizer & fzf. Ctrl+f Into everything!"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ptylabs/tmuxxer"
exclude = ["AGENTS.md"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
proptest = "1.11.0"

[[bin]]
name = "tmuxxer"
path = "src/main.rs"
